--- a/Darkweb-Website/Darkweb-Website.html
+++ b/Darkweb-Website/Darkweb-Website.html
@@ -1,1 +1,44 @@
+<!--The instructions on how to host this page on the dark web is coming soon.-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ibrahim Munir's Website</title>
+    <style>
+        /* ... (styles remain unchanged) ... */
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Ibrahim Munir's Website</h1>
+    </header>
+
+    <section>
+        <h2>Welcome to My Website!</h2>
+        <p>This is Ibrahim Munir's personal website, showcasing expertise and passion in various technology domains.</p>
+
+        <h3>Certifications</h3>
+        <ul>
+            <li>AWS Certified Security - Specialty</li>
+            <li>AWS Certified Solutions Architect - Associate</li>
+        </ul>
+
+        <h3>Passion Areas</h3>
+        <ul>
+            <li>Hacking</li>
+            <li>Cloud Computing</li>
+            <li>IoT Hacking</li>
+            <li>Machine Learning Hacking</li>
+            <li>Coding</li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Ibrahim Munir's Website. All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
 
